fix spacing for listing

--- a/frontend/src/components/Listings/listing.css
+++ b/frontend/src/components/Listings/listing.css
@@ -1,5 +1,5 @@
 .listing-container {
-    padding-top: 30px;
+   margin-top: 70px;
     display: flex;
     margin-left: -20px;
     justify-content: center;
